# ofx-rs

./: .clippy.toml  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  README.md  build_plugin.sh  test.py  test_in_natron.sh
examples/basic/: Cargo.toml  testbed.ntp  testbed2.ntp
examples/basic/src/: basic.rs  lib.rs  tests.rs
examples/simple/: Cargo.toml  testbed.ntp  testbed2.ntp
examples/simple/resources/simple_plugin.ofx.bundle/Contents/: Info.plist
examples/simple/resources/simple_plugin.ofx.bundle/Contents/Linux-x86-64/: simple_plugin.ofx
examples/simple/src/: basic.rs  lib.rs  simple_plugin.rs  tests.rs
ofx/: .project  Cargo.toml
ofx-sys/: .project  Cargo.toml
ofx-sys/src/: lib.rs  support.rs
ofx/src/: action.rs  enums.rs  handle.rs  image.rs  lib.rs  plugin.rs  prop.rs  property.rs  registry.rs  result.rs  suites.rs  types.rs  util.rs
