[package]
name = "ofx"
version = "0.0.1"
authors = ["Nicola Orru <nigu.orru@gmail.com>"]
keywords = ["ofx", "openfx", "effects", "natron", "nuke"]
#edition = "2018"
description = "Bindings for OpenFX 1.4"
repository = "https://github.com/itadinanta/ofx-rs"
license = "Apache-2.0"
# publish = false # insurance against accidents

[lib]
name="ofx"
crate-type = ["lib"]
path="src/lib.rs"

[dependencies]
libc = "0.2"
lazy_static = "1.1"
log="*"
log4rs = "*"
ofx_sys = { path = "../ofx-sys" }
